[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13.0"
bincode = "1.3.3"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
