[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
anyhow = "1.0"
base64 = "0.13.0"
bincode = "1.3.3"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-integer = "0.1"
num-traits = "0.2"
rand = "0.8"
rust-argon2 = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9.8"
structopt = "0.3"
